[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-buoy"
version = "0.1.0"
description = "buoy — an Iris-hosted web viewer for wandb runs (metrics + embedded xprof profiles)."
requires-python = ">=3.12,<3.14"
dependencies = [
    "marin-rigging",
    "marin-iris",
    "wandb>0.16.0",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.28.1",
    "pandas>=2.0",
    "pyarrow>=23.0.0",
    "fsspec>=2024.0.0",
    "gcsfs>=2024.0.0",
    "click>=8.1",
]

[project.scripts]
buoy = "buoy.launch:cli"

[dependency-groups]
test = [
    "pytest>=8.4",
    "pytest-timeout",
]

[tool.hatch.build.targets.sdist]
only-include = ["src/buoy", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/buoy"]

# The no-build frontend ships inside the wheel so the serving process can find it.
[tool.hatch.build.targets.wheel.force-include]
"src/buoy/static" = "buoy/static"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
timeout = 30
timeout_method = "thread"
addopts = "--durations=10 -v"
filterwarnings = ["ignore::DeprecationWarning"]
log_level = "INFO"
