[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-cluster"
version = "0.1.0"
description = "Umbrella tool for Marin cluster config, login, and admin."
requires-python = ">=3.12,<3.14"
# Core depends only on rigging (config + login primitives). The client verbs are
# delegated to iris/finelog, which are optional installs so an admin/user laptop
# need not pull iris's full training closure; the umbrella mounts them lazily when
# present (see marin_cluster.cli._mount_delegated).
dependencies = [
    "marin-rigging",
    "click>=8.3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
iris = ["marin-iris"]
finelog = ["marin-finelog"]
all = ["marin-iris", "marin-finelog"]

[project.scripts]
marin-cluster = "marin_cluster.cli:main"

[dependency-groups]
dev = [
    "marin-iris",
    "marin-finelog",
    "pytest>=8.3.2",
]

[tool.hatch.build.targets.sdist]
only-include = ["src/marin_cluster", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/marin_cluster"]

[tool.pytest.ini_options]
timeout = 10
