[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-ducky"
version = "0.1.0"
description = "ducky — ad-hoc DuckDB SQL service: paste SQL, run it over object-store parquet."
requires-python = ">=3.11"
dependencies = [
    "marin-iris",
    "duckdb>=1.0.0",
    "pyarrow>=23.0.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "click>=8.3.1",
    "httpx>=0.27",
]

[project.scripts]
ducky = "ducky.cli:cli"

[dependency-groups]
test = [
    "pytest>=8.4",
    "pytest-timeout",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ducky"]

[tool.pytest.ini_options]
timeout = 30
timeout_method = "thread"
addopts = "--durations=10 -v"
log_level = "INFO"
