[package]
name = "dupekit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dupekit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = [
    "extension-module",
    "abi3-py311",
] } # stable ABI with minimum Python version 3.11
