[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "marin-dupekit"
# Version is read from rust/Cargo.toml by maturin so the release
# workflow has a single source of truth to bump.
dynamic = ["version"]
description = "Optimized code for text de-duplication, written in Rust"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/marin-community/marin"
Issues = "https://github.com/marin-community/marin/issues"

[tool.maturin]
sdist-include = ["README.md"]
# Avoid linking libpython, making wheels portable
features = ["pyo3/extension-module"]
# The Rust crate lives in the package's own rust/ subtree (no top-level rust/).
manifest-path = "rust/Cargo.toml"
# Place the compiled _native.so inside the dupekit/ Python package under src/.
module-name = "dupekit._native"
python-source = "src"

[tool.uv]
# Force rebuild if Rust sources or Cargo manifests change
cache-keys = [
    "rust/Cargo.toml",
    "rust/Cargo.lock",
    "pyproject.toml",
    "rust/src/**/*.rs",
    "src/dupekit/*.pyi"
]

[dependency-groups]
test = [
    "huggingface-hub",
    "pyarrow>=11.0.0",
    "pytest>=8.3.2",
    "pytest-timeout"
]
dev = [
    { include-group = "test" },
]

[project.optional-dependencies]
benchmark = [
    "pytest-benchmark>=5.2.3",
    "pytest-memray>=1.8.0"
]
