[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "marin-finelog"
version = "0.2.0"
description = "Standalone log store + log service: structured-log ingest, query, and persistence."
requires-python = ">=3.11,<3.13"
# duckdb is used by the deploy CLI to query pulled parquet segments in-process
# (`finelog inspect`), not by a storage engine — the Rust server owns storage.
dependencies = [
    "marin-rigging",
    "click>=8.3.1",
    "connect-python>=0.9.0",
    "duckdb>=1.0.0",
    "fsspec>=2024.0.0",
    "gcsfs>=2024.0.0",
    "protobuf>=5.0",
    "pyarrow>=19.0.0",
    "pyyaml>=6.0",
    "zstandard>=0.22",
]

[project.scripts]
finelog = "finelog.deploy.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-timeout",
    "pytest-xdist",
]

[tool.maturin]
# The native in-process server (`finelog._native`) is built from the cdylib
# crate that lives alongside the Rust server source (`rust/finelog/pyext`).
# `marin-finelog` ships BOTH the pure-Python client/deploy/proto AND the native
# server ext in one wheel. Users install the pre-built wheel (no Rust
# toolchain); source builds happen only in dev mode (`scripts/rust_mode.py dev`).
manifest-path = "../../rust/finelog/pyext/Cargo.toml"
module-name = "finelog._native"
python-source = "src"
features = ["pyo3/extension-module"]
# Deploy configs shipped in the wheel (was a hatch force-include).
include = ["config/**/*"]

[tool.pytest.ini_options]
timeout = 10
timeout_method = "thread"
addopts = "-n auto --durations=25 -v"
filterwarnings = ["ignore::DeprecationWarning"]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
