[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-finelog"
version = "0.2.0"
description = "Standalone log store + log service: structured-log ingest, query, and persistence."
requires-python = ">=3.11,<3.13"
# duckdb is used by the deploy CLI to query pulled parquet segments in-process
# (`finelog inspect`), not by a storage engine — the Rust server owns storage.
dependencies = [
    # The native in-process server ext (module `finelog_server`) ships in the
    # companion dist, built by maturin from this package's rust/ subtree and
    # released in lockstep by finelog-release-wheels.yaml. The dev floor opts
    # uv into its nightlies; `scripts/rust_mode.py dev` swaps in a path source
    # to build it from source instead.
    "marin-finelog-server >= 0.2.0.dev0",
    "marin-rigging",
    "click>=8.3.1",
    "connect-python>=0.9.0",
    "duckdb>=1.0.0",
    "fsspec>=2024.0.0",
    "gcsfs>=2024.0.0",
    "protobuf>=5.0",
    "pyarrow>=23.0.0",
    "pyyaml>=6.0",
    "zstandard>=0.22",
]

[project.scripts]
finelog = "finelog.deploy.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-timeout",
    "pytest-xdist",
]

# Without an explicit list the sdist sweeps the whole directory — including
# dashboard/node_modules and the rust/ tree, which ship separately.
[tool.hatch.build.targets.sdist]
only-include = ["src/finelog", "config", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/finelog"]

# Deploy configs shipped at the wheel root (same layout maturin `include`d).
[tool.hatch.build.targets.wheel.force-include]
"config" = "config"

[tool.uv.sources]
# `scripts/rust_mode.py dev` points marin-finelog-server at ./rust here (and at
# lib/finelog/rust in the root pyproject) so the extension builds from source;
# `user` mode clears the block and the pre-built wheel comes from PyPI.
# ### BEGIN RUST-DEV SOURCES ###
# ### END RUST-DEV SOURCES ###

[tool.pytest.ini_options]
timeout = 10
timeout_method = "thread"
addopts = "-n auto --durations=25 -v"
filterwarnings = ["ignore::DeprecationWarning"]
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
