[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluster"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cloudpickle>=3.1.2",
    "connect-python @ git+https://github.com/connectrpc/connect-python.git@5342eacecef85e52717604ee5ac7e03a1e16c7ac",
    "docker>=7.0.0",
    "fsspec>=2024.0.0",
    "httpx>=0.28.1",
    "humanfriendly>=10.0",
    "pydantic>=2.12.5",
    "starlette>=0.50.0",
    "typing-extensions>=4.0",
    "uvicorn[standard]>=0.23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio",
    "pytest-timeout",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fluster"]
