[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "fray-rusty"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "cloudpickle>=3.0.0",
]

[tool.maturin]
sdist-include = ["README.md", "protocol.capnp"]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "src/**/*.rs" },
    { file = "protocol.capnp" },
    { file = "fray_rusty.pyi" },
]

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "pytest-timeout",
]
