[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-fray"
version = "0.99"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click>=8.0",
    "cloudpickle>=3.1.2",
    "fastapi>=0.100.0",
    "flask>=3.1.3",
    "fsspec>=2024.0.0",
    "httpx>=0.28.1",
    "humanfriendly>=10.0",
    "marin-iris",
    "marin-rigging",
    "mergedeep",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    "typing-extensions>=4.0",
    "uvicorn[standard]>=0.23.0",
    "zstandard>=0.22.0",
]

[dependency-groups]
fray_test = [
    "numpy",
    "pytest-timeout",
    "pytest>=8.3.2",
]
fray_tpu_test = ["jax==0.9.2", "jaxlib==0.9.2", "libtpu==0.0.38", { include-group = "fray_test" }]

dev = [{ include-group = "fray_test" }]

[tool.hatch.build.targets.wheel]
packages = ["src/fray"]
