[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-fray"
version = "0.2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "click>=8.0",
    "cloudpickle>=3.1.2",
    "fastapi>=0.100.0",
    "flask>=3.1.3",
    "fsspec>=2024.0.0",
    "httpx>=0.28.1",
    "humanfriendly>=10.0",
    "marin-iris",
    "marin-rigging",
    "mergedeep",
    "pyyaml>=6.0",
    "tabulate>=0.9.0",
    "typing-extensions>=4.0",
    "uvicorn[standard]>=0.23.0",
    "zstandard>=0.22.0",
]

[dependency-groups]
fray_test = [
    "numpy",
    "pytest-timeout",
    "pytest>=8.3.2",
]
# Exact TPU pins mirror Marin core's TPU/vLLM extras and Levanter's TPU extra.
fray_tpu_test = ["jax==0.10.0", "jaxlib==0.10.0", "libtpu==0.0.40", { include-group = "fray_test" }]

dev = [{ include-group = "fray_test" }]

[tool.hatch.build.targets.wheel]
packages = ["src/fray"]
