[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-fray"
version = "0.2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cloudpickle>=3.1.2",
    "marin-iris",
    "marin-rigging",
]

[dependency-groups]
test = [
    "pytest-timeout",
    "pytest>=8.3.2",
    "pytest-xdist",
]
fray_tpu_test = ["jax==0.10.1", "jaxlib==0.10.1", "libtpu==0.0.41", { include-group = "test" }]

dev = [{ include-group = "test" }]

[tool.pytest.ini_options]
addopts = "-m 'not slow and not tpu_ci' --import-mode=importlib"
pythonpath = ["src", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/fray"]
