[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grugfuzz"
version = "0.1.0"
description = "Testing utilities for porting HuggingFace models to Grug JAX"
requires-python = ">=3.11,<3.13"
dependencies = [
    "jax",
    "jaxlib",
    "numpy",
    "torch",
    "levanter",
]

[project.optional-dependencies]
transformers = ["transformers"]

[dependency-groups]
test = ["pytest>=8.3.2", "transformers"]
dev = [{ include-group = "test" }]

[tool.uv.sources]
levanter = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/grugfuzz"]
