[build-system]
requires = ["uv_build>=0.7.19,<0.10.0"]
build-backend = "uv_build"

[project]
name = "grugpt"
version = "0.0.1"
description = "Dead-simple explicit-sharding transformer pieces inspired by grugbrain"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.8.0",
    "einops>=0.8.0",
    "einshard>=0.0.8",
    "optax>=0.2.2",
    "tokenizers>=0.15.2",
    "transformers>=4.46.0",
    "levanter",
]

[tool.uv]
default-groups = []
