[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marin-iris"
version = "0.2.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "marin-rigging",
    # marin-finelog is the pure-Python client/deploy/proto. The controller also
    # starts an in-process native log server (module `finelog_server`), which
    # ships as the separate marin-finelog-server platform wheel; the pure client
    # does not depend on it, so the controller — its one consumer — pulls it in
    # explicitly. Both pinned to the latest stable, mirroring root pyproject.
    "marin-finelog >= 0.2.10",
    "marin-finelog-server >= 0.2.10",
    "click>=8.3.1",
    "cloudpickle>=3.1.2",
    "connect-python>=0.9.0",
    "fsspec>=2024.0.0",
    "gcsfs>=2024.0.0",
    "google-auth>=2.0",
    "google-cloud-tpu>=1.18.0",
    "s3fs>=2024.0.0",
    "grpcio>=1.76.0",
    "httpx>=0.28.1",
    "humanfriendly>=10.0",
    "pydantic>=2.0",
    "PyJWT>=2.12.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0",
    "starlette>=0.50.0",
    "tabulate>=0.9.0",
    "typing-extensions>=4.0",
    "uvicorn[standard]>=0.23.0",
    "zstandard>=0.22.0",
]

[project.optional-dependencies]
controller = [
    "kubernetes>=31.0.0,<36",
]
worker = []
# Interactive `iris login` against an IAP-fronted cluster (desktop OAuth flow).
# Kept out of core so the controller/worker import path stays free of oauthlib.
iap = ["marin-rigging[iap]"]

[project.scripts]
iris = "iris.cli:iris"
iris-run = "iris.cli.run:run"

[dependency-groups]
examples = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
]
dev = [
    "kubernetes>=31.0.0,<36",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "playwright>=1.49.0",
    "pytest-asyncio",
    "pytest-flakefinder>=1.1.0",
    "pytest-playwright>=0.6.2",
    "pytest-timeout",
    "pytest-xdist",
    "pytest>=8.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iris"]

[tool.hatch.build.targets.wheel.force-include]
# Cluster YAML configs live outside src/ because they are configuration data,
# not Python package source. force-include maps them into the wheel at
# iris/config/ so that when iris is installed as a wheel, the bundled configs
# are reachable via Path(__file__).parent.parent / "config" (the wheel-layout
# probe in _bundled_iris_config_dir() in iris.cli.main).
"config" = "iris/config"

[tool.hatch.build.targets.sdist]
# Without an explicit sdist scope, hatchling sweeps the whole iris/ directory
# and bundles ~146 MiB of dashboard/node_modules (git-ignored but still on
# disk). Restrict to source + configs so the sdist stays small.
packages = ["src/iris"]

[tool.hatch.build.targets.sdist.force-include]
"config" = "config"

[tool.pytest.ini_options]
timeout = 10
timeout_method = "thread"
addopts = "-n auto --durations=25 -m 'not slow and not docker and not requires_cluster' -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "docker: marks tests requiring Docker runtime (slow, needs daemon)",
    "requires_cluster: mark tests that need a running iris cluster",
]
filterwarnings = ["ignore::DeprecationWarning"]
# Cap assertion-diff output even under -v, so a single bad assertion
# can't dump tens of KB of proto repr into CI logs.
truncation_limit_lines = 100
truncation_limit_chars = 10000
log_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
