[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
requires-python = ">=3.11,<3.13"

[project]
name = "marin"
version = "0.1.0"

requires-python = ">=3.11"
dependencies = [
    "braceexpand",
    "cryptography>=45",
    "datasets",
    "deepdiff",
    "draccus>=0.11.5",
    "fasteners>=0.19",
    "flask",
    "fsspec>=2025.3.0",
    "gcsfs",
    "google-api-python-client>=2.175.0",
    "google-cloud-storage",
    "google-cloud-storage-transfer",
    "jax>=0.6.2",
    "haliax",
    "levanter[serve]",
    "lz4",
    "markdownify==0.12.1",
    "zephyr",
    "fray",
    "multiprocess==0.70.16",
    "numpy",
    "openai",
    "pandas", # Only needed by Fileprovider in inference.py
    "pyarrow>=22",
    "ray==2.45",
    "regex",
    "requests",
    "s3fs>=2024",
    "toml",
    "torch>=2.7.0",
    "tqdm",
    "tqdm-loggable",
    "wandb",
]

[project.license]
file = "../../LICENSE"

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-cov",
    "pytest-profiling",
    # need this for integration tests
    "pip",
    "openai-responses",
]
lint = [
    "ruff==0.14.3",
    "black==25.9.0",
    "mypy>=1.4.1",
    "pyrefly==0.40.0",
    "types-PyYAML",
    "types-requests",
    "types-six",
    "click>=8.0",
    "pyyaml>=6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-include-markdown-plugin>=7.1.5",
]

math = ["pylatexenc", "sympy"]

metrics = ["google-cloud-logging"]

transform_test_deps = [
    "trafilatura>=2.0",
    "readabilipy",
    "readability-lxml",
    "warcio",
    "markdownify==0.12.1",
    "resiliparse",
    "ddsketch",
]

dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    { include-group = "math" },
    { include-group = "transform_test_deps" },
]

[tool.uv]
conflicts = [
    [
        { extra = "tpu" },
        { extra = "cuda12" },
    ],
    [
        { extra = "cuda12" },
        { extra = "cpu" },
    ],
]

[tool.uv.sources]
zephyr = { workspace = true }
levanter = { workspace = true }
fray = { workspace = true }
dupekit = { workspace = true }

torch = [
    # Default to the CPU index for TPU/CPU builds
    { index = "pytorch-cpu", extra="cpu" },
    { index = "pytorch-cpu", extra="tpu" },
    # CUDA12 index only when --extra cuda12
    { index = "pytorch-cu128", extra = "cuda12" },
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[project.optional-dependencies]

gcp = [
    "google-api-python-client>=2.175.0", # ray GCP workaround
    "cryptography>=45",
    "google-cloud-storage>=3.3.1",
    "google-cloud-storage-transfer",
    "google-cloud-compute",
]

cuda12 = ["jax[cuda12]>=0.6.2", "torch>=2.7.0"]

tpu = ["jax[tpu]>=0.6.2", "torch>=2.7.0"]

cpu = ["jax>=0.6.2", "torch>=2.7.0"]

download_transform = [
    "chardet",
    "datasets>=2.18.0",
    "fastparquet",
    "google-cloud-storage-transfer~=1.0",
    "html2text==2024.2.26",               # TODO :: Check pin?
    "htmlmin==0.1.12",                    # TODO :: Check usage | pin?
    "markdownify==0.12.1",                # TODO :: Check usage | pin?
    "readabilipy",
    "readability-lxml",
    "lxml[html_clean]",
    "warcio",
    "resiliparse",
    "trafilatura>=2.0",
    "boto3==1.35.23",
]

quality_dedup_consolidate = [
    "cattrs==24.1.3",
    "datasets",
    "ddsketch",
    "dupekit",
    "fasttext",
    "huggingface_hub",
    "nltk>=3.8.1",
    "transformers",
    "zstandard>=0.18.0",
]

tokenize_train = [
    "multiprocess==0.70.16",
    "haliax>=1.4.dev443",
    "lm-eval@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
    "tblib",
]

rl = [
    "prime",
    "sympy",
    "verifiers==0.1.5",
]

post_training = [
    "gcsfs",
    "transformers",
    "flax==0.10.0",
    "jaxtyping",
    "tyro==0.8.11",
    "tqdm",
    "wandb",
    "einops",
    "ringattention==0.1.2",
    "sympy",
    "pylatexenc",
    "ipython",
    "datasets",
    "scalax@git+https://github.com/Sea-Snell/scalax@8cf9ceabe30d4c4274df3c09aae2f66b59fbce3c",
    "swebench ; sys_platform != 'darwin'",
]

eval = [
    "lm-eval[math]@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
    # there are some undeclared dependencies in lm-eval
    "langdetect",
    "immutabledict",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/marin"]

[tool.hatch.build.targets.sdist]
packages = ["src/marin"]
