[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
requires-python = ">=3.11,<3.13"

[project]
name = "marin"
version = "0.1.0"

requires-python = ">=3.11"
dependencies = [
    "braceexpand",
    "cryptography>=45",
    "datasets",
    "ddsketch",
    "deepdiff",
    "draccus>=0.11.5",
    "dupekit",
    "fasteners>=0.19",
    "fasttext",
    "flask",
    "fsspec>=2025.3.0",
    "gcsfs",
    "google-api-python-client>=2.175.0",
    "google-cloud-storage",
    "google-cloud-storage-transfer",
    "jax==0.8.0",  # vllm-tpu currently requires this exact version
    "haliax",
    "levanter[serve]",
    "lm-eval@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
    "lxml[html_clean]",
    "lz4",
    "markdownify==0.12.1",
    "zephyr",
    "fray",
    "multiprocess==0.70.16",
    "numpy",
    "openai",
    "pandas",
    "pyarrow>=22",
    "ray==2.53.0",
    "regex",
    "requests",
    "s3fs>=2024",
    "toml",
    "torch>=2.7.0",
    "tqdm",
    "tqdm-loggable",
    "wandb",
    "warcio",
    "resiliparse>=0.17.2",
]

[project.license]
file = "../../LICENSE"

[dependency-groups]
test = [
    "pytest>=8.3.2",
    "pytest-asyncio",
    "pytest-xdist",
    "pytest-timeout",
    "pytest-cov",
    "pytest-profiling",
    # need this for integration tests
    "pip",
    "openai-responses",
]
lint = [
    "ruff==0.14.3",
    "black==25.9.0",
    "mypy>=1.4.1",
    "pyrefly==0.40.0",
    "types-PyYAML",
    "types-requests",
    "types-six",
    "click>=8.0",
    "pyyaml>=6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "pymdown-extensions>=10.0.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-git-authors-plugin>=0.9.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-include-markdown-plugin>=7.1.5",
]

math = ["pylatexenc", "sympy"]

metrics = ["google-cloud-logging"]

dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "docs" },
    { include-group = "math" },
]

[tool.uv]
conflicts = [
    [
        { extra = "gpu" },
        { extra = "tpu" },
    ],
    [
        { extra = "gpu" },
        { extra = "cpu" },
    ],
]


[project.optional-dependencies]

gpu = ["jax[cuda12]==0.8.0", "torch>=2.7.0"]

tpu = ["jax[tpu]==0.8.0", "torch>=2.7.0"]

cpu = ["jax==0.8.0", "torch>=2.7.0"]

rl = [
    "prime",
    "sympy",
    "verifiers==0.1.5",
]

eval = [
    "lm-eval[math]@git+https://github.com/stanford-crfm/lm-evaluation-harness@d5e3391f22cde186c827674d5c3ec7c5f4fe0cab",
]

[[tool.uv.index]]
name = "marin-resiliparse"
url = "https://marin-community.github.io/chatnoir-resiliparse/simple"

[tool.uv.sources]
torch = [
    # Default to the CPU index for TPU/CPU builds
    { index = "pytorch-cpu", extra="cpu" },
    { index = "pytorch-cpu", extra="tpu" },
    # GPU index only when --extra gpu
    { index = "pytorch-cu128", extra = "gpu" },
]
resiliparse = { index = "marin-resiliparse" }


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/marin"]

[tool.hatch.build.targets.sdist]
packages = ["src/marin"]
